# Kryptonite

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
kryptonite/: __init__.py  __main__.py  cli.py
kryptonite-ui/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
kryptonite-ui/src/: App.tsx  index.css
kryptonite-web/: README.md  package-lock.json  package.json
kryptonite-web/backend/: main.py  test_api.py  tunnel.py
kryptonite-web/src/app/: globals.css  layout.tsx  page.tsx
kryptonite/analyzers/: crypto_analyzer.py  data_storage_analyzer.py  logging_analyzer.py  secrets_analyzer.py  url_scheme_analyzer.py
kryptonite/analyzers/android/: binary_analyzer.py  component_analyzer.py  data_storage_analyzer.py  manifest_analyzer.py  permissions_analyzer.py  transport_analyzer.py
kryptonite/analyzers/ios/: binary_analyzer.py  permissions_analyzer.py  transport_analyzer.py
kryptonite/core/: apk_parser.py  finding.py  ipa_parser.py  owasp.py
kryptonite/reports/: report_generator.py  template.html
report/: midterm_presentation.tex
tests/: __init__.py  conftest.py  create_test_apk.py  create_test_ipa.py  debug_log.txt  run_debug.py  run_test.py  run_test_apk.py  test_android_manifest_analyzer.py  test_android_permissions_analyzer.py  test_app.ipa  test_crypto_analyzer.py  test_finding.py  test_ios_permissions_analyzer.py  test_ios_transport_analyzer.py  test_logging_analyzer.py  test_owasp.py  test_report_generator.py  test_secrets_analyzer.py  validate_results.py
tests/output/: report.html  report.json
