[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptonite"
version = "1.0.0"
description = "iOS IPA Static Analysis Security Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "lxml>=4.9",
    "jinja2>=3.1",
]

[project.scripts]
kryptonite = "kryptonite.cli:main"

[tool.setuptools.packages.find]
include = ["kryptonite*"]
